# Werewolf

./: README.md  config.toml  pyproject.toml
backend/: base.py  entity.py  events.py  game_state.py  llm.py  main.py
backend/agents/: BaseAgent.py  SeerAgent.py  VillagerAgent.py  WerewolfAgent.py  WitchAgent.py  __init__.py
frontend/: qwen.html
