[project]
name = "werewolf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.5",
    "bidict==0.23.1",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "cachetools==6.2.0",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "docutils==0.22",
    "executing==2.2.1",
    "fastapi==0.116.1",
    "fastjsonschema==2.21.2",
    "fqdn==1.5.1",
    "frozenlist==1.7.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "idna==3.10",
    "ifaddr==0.2.0",
    "iniconfig==2.1.0",
    "ipykernel==6.30.1",
    "ipython==9.5.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.7",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "json5==0.12.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-console==6.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.7",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.15",
    "langchain==0.3.27",
    "langchain-community==0.3.29",
    "langchain-core==0.3.76",
    "langchain-openai==0.3.33",
    "langchain-text-splitters==0.3.11",
    "langsmith==0.4.27",
    "lark==1.2.2",
    "markdown2==2.5.4",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.4",
    "multidict==6.6.4",
    "mypy-extensions==1.1.0",
    "narwhals==2.4.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "nicegui==2.24.1",
    "notebook==7.4.5",
    "notebook-shim==0.2.4",
    "numpy==2.3.3",
    "openai==1.107.1",
    "orjson==3.11.3",
    "packaging==25.0",
    "pandas==2.3.2",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "pluggy==1.6.0",
    "prometheus-client==0.22.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.3.2",
    "protobuf==6.32.0",
    "pscript==0.7.7",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pycparser==2.23",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pydeck==0.9.1",
    "pygments==2.19.2",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-engineio==4.12.2",
    "python-json-logger==3.3.0",
    "python-multipart==0.0.20",
    "python-socketio==5.13.0",
    "pytz==2025.2",
    "pywin32==311",
    "pywinpty==3.0.0",
    "pyyaml==6.0.2",
    "pyzmq==27.1.0",
    "referencing==0.36.2",
    "regex==2025.9.1",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rpds-py==0.27.1",
    "send2trash==1.8.3",
    "setuptools==80.9.0",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqlalchemy==2.0.43",
    "sse-starlette==3.0.2",
    "sseclient==0.0.27",
    "sseclient-py==1.8.0",
    "stack-data==0.6.3",
    "starlette==0.47.3",
    "streamlit==1.49.1",
    "tenacity==9.1.2",
    "terminado==0.18.1",
    "tiktoken==0.11.0",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20250822",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "vbuild==0.8.2",
    "watchdog==6.0.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "widgetsnbextension==4.0.14",
    "wsproto==1.2.0",
    "yarl==1.20.1",
    "zstandard==0.24.0",
]
